# fcSpline

./: README.md  build.py  flake.nix  pyproject.toml  requirements.txt  setup.py
egg/: fcSpline-0.1-py3.4-linux-x86_64.egg
examples/: ex1.py  example.py
fcSpline/: __init__.py  fcs.py  fcs_c.pyx
tests/: test_fcs.py
