[tool.poetry]
description = "A fast cubic spline interpolator for real and complex data."
name = "fcSpline"
version = "0.1"
authors = ["Richard Hartmann <richard.hartmann@tu-dresden.de>"]
packages = [
    { include = "fcSpline" },
]
license = "BSD (3 clause)"
classifiers = [
"Operating System :: OS Independent",
"License :: OSI Approved :: BSD License",
"Topic :: Utilities",
"Intended Audience :: Researcher"
]
repository = "https://github.com/cimatosa/fcSpline"
build = 'build.py'

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.20.3"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
Cython = "^0.29.25"

[build-system]
requires = ["poetry>=0.12", "cython"]
build-backend = "poetry.core.masonry.api"
